--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -68,6 +68,14 @@
 			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-inline</artifactId>
+			<version>5.10.0</version>
+			<scope>test</scope>
+		</dependency>
+
 
 	</dependencies>
 
