--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 spring.application.name=project-management-app
 spring.docker.compose.enabled=false
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 
 spring.datasource.url=jdbc:mysql://localhost:3306/PRACTICA?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
@@ -10,4 +9,6 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:schema.sql
 
